[project]
name = "hnet-encoder"
version = "0.1.0"
description = "Applying H-Net ideas to encoder LMs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flash-attn==2.8.1",
    "causal-conv1d==1.5.2",
    "torch>=2.7.1",
    "mamba-ssm",
    "datasets>=4.4.2",
    "mlflow>=3.8.1",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[tool.uv.workspace]
members = [
    "packages/hnet-encoder-impl",
    "packages/hnet-impl",
    "packages/hydra",
]

[tool.uv]
no-build-isolation-package = ["flash-attn", "causal-conv1d"]

[tool.uv.extra-build-dependencies]
flash-attn = [
    { requirement = "torch", match-runtime = true },
]
causal-conv1d = [
    { requirement = "torch", match-runtime = true },
]

[tool.uv.sources]
mamba-ssm = { git = "https://github.com/main-horse/mamba", rev = "tc" }
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
